<resources>
    <string name="app_name">CarePlus</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
<!--    <string name="menu_guests">Guests</string>-->
    <string name="menu_guests">Prabhuji</string>
    <string name="menu_medicines">Medicines</string>
    <string name="menu_hospitals">Hospitals</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_and_feedback">Help &amp; Feedback</string>
    <string name="menu_about">About</string>

    <string name="careplus_logo">CarePlus logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_hospitalization">New Hospitalization</string>
    <string name="new_medication">New Medication</string>
    <string name="new_hospital">New hospital</string>
    <string name="new_medicine">New Medicine</string>
<!--    <string name="new_guest">New guest</string>-->
    <string name="new_guest">New prabhuji</string>

    <string-array name="medicine_types">
        <item>--Select medicine type--</item>
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Syrup</item>
        <item>Drop</item>
        <item>Injection</item>
        <item>Cream / Gel</item>
        <item>Powder</item>
        <item>Other</item>
    </string-array>

    <string-array name="medicine_quantities">
        <item>units</item>
        <item>Tablets</item>
        <item>Capsules</item>
        <item>ml</item>
        <item>ml</item>
        <item>units</item>
        <item>tubes</item>
        <item>gm</item>
        <item>units</item>
    </string-array>

    <string-array name="BDA">
        <item>Before</item>
        <item>During</item>
        <item>After</item>
    </string-array>

    <string-array name="meal">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>